src/snapshots/tat__app__test__render_main_menu-5.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                      Terminal Attribute Table                                      "
"                                                                                                    "
"╭ Dataset ──────────────────────────── <type ? to show help> ──────────────────────────────────────╮"
"│- URI: "./testdata/basic.gpkg"                                                                    │"
"│- Driver: GeoPackage (GPKG)                                                                       │"
"│                                                                                                  │"
"│ Layers ─────┬ Layer Information ────────┬ Preview Table ─────────────────────────────────────────┤"
"│point        │ame: point                 │          │                                             │"
"│line         │RS: EPSG:3857 (WGS 84 / Pse│Feature   │field                                        │"
"│polygon      │eature Count: 4            │1         │NULL                                         │"
"│multipolygon │eometry fields:            │2         │NULL                                         │"
"│nogeom       │ "geom" - (Point, EPSG:3857│3         │NULL                                         │"
"│             │ields (1):                 │4         │NULL                                         │"
"│             │ "field" - (Integer)       │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │◄══████████████████═══════►│          │                                             │"
"╰─────────────┴───────────────────────────┴────────────── <Enter> to open full table ──────────────╯"
