src/snapshots/tat__app__test__select_last_layer.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                      Terminal Attribute Table                                      "
"                                                                                                    "
"╭ Dataset ──────────────────────────── <type ? to show help> ──────────────────────────────────────╮"
"│- URI: "./testdata/basic.gpkg"                                                                    │"
"│- Driver: GeoPackage (GPKG)                                                                       │"
"│                                                                                                  │"
"│ Layers ─────┬ Layer Information ────────┬ Preview Table ─────────────────────────────────────────┤"
"│point        │- Name: nogeom             │          │                                             │"
"│line         │- Feature Count: 60        │Feature   │text_field                                   │"
"│polygon      │- Fields (9):              │1         │text                                         │"
"│multipolygon │    "text_field" - (String)│2         │buzz                                         │"
"│nogeom       │    "i32_field" - (Integer)│3         │check                                        │"
"│             │    "i64_field" - (Integer6│4         │die                                          │"
"│             │    "decimal_field" - (Real│5         │participate                                  │"
"│             │    "date_field" - (Date)  │6         │huge                                         │"
"│             │    "datetime_field" - (Dat│7         │read                                         │"
"│             │    "bool_field" - (Integer│8         │check                                        │"
"│             │    "blob_field" - (Binary)│9         │strive                                       │"
"│             │    "json_field" - (String)│10        │strive                                       │"
"│             │                           │11        │fall                                         │"
"│             │                           │12        │participate                                  │"
"│             │                           │13        │study                                        │"
"│             │                           │14        │respect                                      │"
"│             │                           │15        │die                                          │"
"│             │                           │16        │verify                                       │"
"│             │                           │17        │study                                        │"
"│             │                           │18        │verify                                       │"
"│             │                           │19        │verify                                       │"
"│             │                           │20        │murky                                        │"
"│             │                           │21        │arrest                                       │"
"│             │                           │22        │participate                                  │"
"│             │                           │23        │loving                                       │"
"│             │                           │24        │breath                                       │"
"│             │                           │25        │breath                                       │"
"│             │                           │26        │read                                         │"
"│             │                           │27        │breath                                       │"
"│             │                           │28        │participate                                  │"
"│             │                           │29        │tremble                                      │"
"│             │◄█████████████████████════►│30        │study                                        │"
"╰─────────────┴───────────────────────────┴────────────── <Enter> to open full table ──────────────╯"
