src/snapshots/tat__app__test__show_value_popup.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                               point                                               ▲"
"                                                                                                   █"
"Feature   │geom                                         field                                      █"
"1         │POINT (0 0)                                  NULL                                       █"
"2         │POINT (1 0)                                  NULL                                       █"
"3         │POINT (1 1)                                  NULL                                       █"
"4         │POIN                                                                                    █"
"          │     ╭────────────────── Feature 1 - Value of "geom" ───────────────────╮               █"
"          │     │POINT (0 0)                                                       │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     ╰─────────────────────── <press q to close> ───────────────────────╯               █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"────────────────────────────────────── <type ? to show help> ──────────────────────────────────────▼"
"◄██████████████████████████████████████████████████████████████████████████████████████████████████►"
